@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.3.0
 
+	- Added sorting to Fl_Browser_ (STR #2113)
 	- Added utf8 support for OS X copy and paste
 	- Improved handling of composed keys in OS X 10.5 and up
 	- Updated the bundled libpng to v1.2.33.
